--- a/index.html
+++ b/index.html
@@ -337,9 +337,8 @@
                 <div class="lg:w-1/2 mb-10 lg:mb-0 lg:pr-10">
                     <div class="relative rounded-xl overflow-hidden shadow-2xl glow-box">
                         <div class="aspect-w-16 aspect-h-9">
-                            <video width="640" height="360" controls> <source src= "video/chocolate_perfeito (1080p).mp4" type="video/mp4"> </video>
+                             <iframe width="560" height="315" src="https://youtube.com/embed/1nlXZZAFzN4" title="Youtube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
                         </div>
-                        <div class="absolute inset-0 flex items-center justify-center">
                             
                         </div>
                     </div>
