--- a/index.html
+++ b/index.html
@@ -336,9 +336,18 @@
             <div class="flex flex-col lg:flex-row items-center">
                 <div class="lg:w-1/2 mb-10 lg:mb-0 lg:pr-10">
                     <div class="relative rounded-xl overflow-hidden shadow-2xl glow-box">
-                        <div class="aspect-w-16 aspect-h-9">
-                             <iframe width="560" height="315" src="https://youtube.com/embed/1nlXZZAFzN4" title="Youtube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+                        <!-- Bloco responsivo para vídeo embed -->
+                        <div class="relative w-full overflow-hidden rounded-xl shadow-2xl" style="aspect-ratio: 16/9;">
+                             <iframe
+                                class="absolute top-0 left-0 w-full h-full"
+                                src="https://www.youtube.com/embed/1nlXZZAFzN4"
+                                title="YouTube video player"
+                                frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen>
+                            </iframe>
                         </div>
+
                             
                         </div>
                     </div>
