--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                             <img src="https://randomuser.me/api/portraits/men/75.jpg" class="w-10 h-10 rounded-full border-2 border-white" alt="Cliente satisfeito">
                             <img src="https://randomuser.me/api/portraits/women/68.jpg" class="w-10 h-10 rounded-full border-2 border-white" alt="Cliente satisfeita">
                         </div>
-                        <p class="text-white text-sm">
+                        <p class="text-white text-sm mt-2 md:mt-0 ml-8">
                             <span class="font-bold">+2.347</span> pessoas já adquiriram e estão transformando seus chocolates!
                         </p>
                     </div>
@@ -337,17 +337,16 @@
                 <div class="lg:w-1/2 mb-10 lg:mb-0 lg:pr-10">
                     <div class="relative rounded-xl overflow-hidden shadow-2xl glow-box">
                         <!-- Bloco responsivo para vídeo embed -->
-                        <div class="relative w-full overflow-hidden rounded-xl shadow-2xl" style="aspect-ratio: 16/9;">
-                             <iframe
-                                class="absolute top-0 left-0 w-full h-full"
-                                src="https://www.youtube.com/embed/1nlXZZAFzN4"
-                                title="YouTube video player"
-                                frameborder="0"
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen>
-                            </iframe>
+                        <div class="relative aspect-video w-full overflow-hidden rounded-xl shadow-2xl glow-box">
+                           <iframe
+                             class="absolute top-0 left-0 w-full h-full"
+                             src="https://www.youtube.com/embed/1nlXZZAFzN4"
+                             title="YouTube video player"
+                             frameborder="0"
+                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                             allowfullscreen>
+                           </iframe>
                         </div>
-
                             
                         </div>
                     </div>
