--- a/index.html
+++ b/index.html
@@ -337,16 +337,16 @@
                 <div class="lg:w-1/2 mb-10 lg:mb-0 lg:pr-10">
                     <div class="relative rounded-xl overflow-hidden shadow-2xl glow-box">
                         <!-- Bloco responsivo para vídeo embed -->
-                        <div class="relative aspect-video w-full overflow-hidden rounded-xl shadow-2xl glow-box">
-                           <iframe
-                             class="absolute top-0 left-0 w-full h-full"
-                             src="https://www.youtube.com/embed/1nlXZZAFzN4"
-                             title="YouTube video player"
-                             frameborder="0"
-                             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                             allowfullscreen>
-                           </iframe>
-                        </div>
+                        <div id="video" class="relative w-full overflow-hidden rounded-xl shadow-2xl aspect-video mb-8">
+      <iframe
+        class="absolute top-0 left-0 w-full h-full"
+        src="https://www.youtube.com/embed/1nlXZZAFzN4"
+        title="Como Fazer Chocolate Temperado"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen>
+      </iframe>
+    </div>
                             
                         </div>
                     </div>
