--- a/index.html
+++ b/index.html
@@ -337,16 +337,17 @@
                 <div class="lg:w-1/2 mb-10 lg:mb-0 lg:pr-10">
                     <div class="relative rounded-xl overflow-hidden shadow-2xl glow-box">
                         <!-- Bloco responsivo para vídeo embed -->
-                        <div id="video" class="relative w-full overflow-hidden rounded-xl shadow-2xl aspect-video mb-8">
-      <iframe
-        class="absolute top-0 left-0 w-full h-full"
-        src="https://www.youtube.com/embed/1nlXZZAFzN4"
-        title="Como Fazer Chocolate Temperado"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen>
-      </iframe>
-    </div>
+                        <!-- VÍDEO EMBED RESPONSIVO -->
+<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; height: auto;">
+  <iframe 
+    src="https://www.youtube.com/embed/1nlXZZAFzN4"
+    frameborder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowfullscreen
+    style="position: absolute; top:0; left: 0; width: 100%; height: 100%;">
+  </iframe>
+</div>
+
                             
                         </div>
                     </div>
