--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
                             <p class="text-gray-600">Oportunidade Única!</p>
                         </div>
                         
-                        <a href="https://pay.hotmart.com/F100460187H" class="block btn-gold text-white font-bold py-4 px-8 rounded-full text-lg mb-4 pulse text-center">
+                        <a href="https://checkout.kanzenstore.com.br/VCCL1O8SCBAX">
                             <i class="fas fa-lock mr-2"></i> COMPRAR AGORA COM SEGURANÇA
                         </a>
                         
@@ -861,3 +861,4 @@
     </script>
 </body>
 </html>
+
