--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
                         </div>
                         
                         <a href="https://checkout.kanzenstore.com.br/VCCL1O8SCBAX">
-                            <i class="fas fa-lock mr-2"></i> COMPRAR AGORA COM SEGURANÇA
+                            <i class="fas fa-lock mr-2"></i> COMPRAR AGORA
                         </a>
                         
                         <div class="flex justify-center gap-4 mb-4">
@@ -861,4 +861,5 @@
     </script>
 </body>
 </html>
+
 
