--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
                             <p class="text-gray-600">Oportunidade Única!</p>
                         </div>
                         
-                        <a href="https://checkout.kanzenstore.com.br/VCCL1O8SCBAX">
+                        <a href="https://checkout.kanzenstore.com.br/VCCL1O8SCBAX" class="block btn-gold text-white font-bold py-4 px-8 rounded-full text-lg mb-4 pulse text-center">
                             <i class="fas fa-lock mr-2"></i>ADQUIRIR MEU EBOOK
                         </a>
                         
@@ -861,6 +861,7 @@
     </script>
 </body>
 </html>
+
 
 
 
