--- a/index.html
+++ b/index.html
@@ -168,7 +168,24 @@
                 margin-bottom: 20px;
             }
         }
+
+        
     </style>
+
+    <!-- Favicon padrão -->
+<link rel="icon" type="image/x-icon" href="favicon.ico">
+
+<!-- Ícones PNG para diferentes tamanhos -->
+<link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="192x192" href="web-app-manifest-192x192.png">
+<link rel="icon" type="image/png" sizes="512x512" href="web-app-manifest-512x512.png">
+
+<!-- Ícone para Apple (iPhone/iPad) -->
+<link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+
+<!-- Manifesto do app (opcional, melhora compatibilidade com Android) -->
+<link rel="manifest" href="site.webmanifest">
+
 </head>
 <body>
     <!-- Header -->
@@ -861,6 +878,7 @@
     </script>
 </body>
 </html>
+
 
 
 
