--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
                         
                         <div class="coupon-box bg-amber-100/20 border-2 border-dashed border-amber-300 rounded-lg p-4 mb-6 text-center">
                             <p class="font-bold text-amber-300 mb-1">USE O CUPOM (Esgotado):</p>
-                            <p class="text-2xl font-bold text-white">Compre logo abaixo...</p>
+                            <p class="text-2xl font-bold text-white">Adquira logo abaixo...</p>
                             <p class="text-sm text-amber-200">30% de desconto aplicado na página de pagamento</p>
                         </div>
                         
@@ -885,6 +885,7 @@
     </script>
 </body>
 </html>
+
 
 
 
