Change greeting from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
   async
   defer
 ></script>
+
+    <script>
+  window.pixelId = "690e302558bab8806a49d06d";
+  var a = document.createElement("script");
+  a.setAttribute("async", "");
+  a.setAttribute("defer", "");
+  a.setAttribute("src", "https://cdn.utmify.com.br/scripts/pixel/pixel.js");
+  document.head.appendChild(a);
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ebook Chocolate Perfeito - Domine a Arte do Chocolate Temperado</title>
@@ -885,6 +894,7 @@
     </script>
 </body>
 </html>
+
 
 
 
