--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
                         </div>
                         <div class="flex items-start">
                             <i class="fas fa-check-circle text-amber-700 mt-1 mr-3"></i>
-                            <span class="text-gray-700">Seu reembolso é processado e gerenciado pela Hotmart!</span>
+                            <span class="text-gray-700">Seu reembolso é processado e gerenciado pela Kanzen Store!</span>
                         </div>
                     </div>
                 </div>
@@ -596,7 +596,7 @@
                         </ul>
                         <div class="text-center">
                             <p class="text-gray-500 mb-2">Valor total do pacote:</p>
-                            <p class="text-2xl font-bold text-amber-700">R$49,90</p>
+                            <p class="text-2xl font-bold text-amber-700">R$89,90</p>
                             <p class="text-gray-500 mb-4">Mas hoje você leva por apenas:</p>
                         </div>
                     </div>
@@ -646,7 +646,7 @@
                     </div>
                     <div class="md:w-1/2 p-8 md:p-12">
                         <div class="text-center mb-8">
-                            <p class="text-gray-500 mb-1">De <span class="price-strike">R$49,90</span> por apenas:</p>
+                            <p class="text-gray-500 mb-1">De <span class="price-strike">R$89,90</span> por apenas:</p>
                             <p class="text-5xl font-bold text-amber-700 mb-2">R$44,90</p>
                             <p class="text-gray-600">Oportunidade Única!</p>
                         </div>
@@ -723,7 +723,7 @@
                 
                 <div class="accordion-item mb-4 border-b border-amber-100 pb-4">
                     <button class="accordion-btn w-full flex justify-between items-center text-left font-bold text-amber-900 hover:text-amber-700 focus:outline-none">
-                        <span>Posso vender os chocolates que aprender a fazer?</span>
+                        <span>Há conteúdo que ensine a vender os chocolates??</span>
                         <i class="fas fa-plus text-amber-700"></i>
                     </button>
                     <div class="accordion-content hidden pt-2 text-gray-600">
@@ -894,6 +894,7 @@
     </script>
 </body>
 </html>
+
 
 
 
