Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -533,12 +533,12 @@
                         <div class="text-xs">SEGUNDOS</div>
                     </div>
                 </div>
-                <p class="text-amber-200">Esta oferta com bônus exclusivos está disponível apenas para as próximas compras!</p>
+                <p class="text-amber-200">Esta oferta exclusiva está disponível apenas para as próximas compras!</p>
             </div>
             
             <div class="text-center">
                 <a href="#oferta" class="btn-gold text-white font-bold py-4 px-8 rounded-full text-lg inline-block transform hover:scale-105 transition duration-300">
-                    <i class="fas fa-gift mr-2"></i> QUERO MEUS BÔNUS AGORA
+                    <i class="fas fa-gift mr-2"></i> QUERO MEU EBOOK AGORA
                 </a>
             </div>
         </div>
@@ -579,7 +579,7 @@
                             </li>
                             <li class="flex items-start">
                                 <i class="fas fa-check text-amber-700 mt-1 mr-3"></i>
-                                <span class="text-gray-700 font-medium">Bônus: Receitas "Completas e Valiosas"</span>
+                                <span class="text-gray-700 font-medium">Receitas "Completas e Valiosas"</span>
                             </li>
                             <li class="flex items-start">
                                 <i class="fas fa-check text-amber-700 mt-1 mr-3"></i>
@@ -894,6 +894,7 @@
     </script>
 </body>
 </html>
+
 
 
 
